@@ -1,6 +1,8 @@
 Changes in 0.6
 - fix "try a smaller blocksize" failures when zsyncmakeing for huge compressed
   files on 32bit systems
+- fix potential crash when re/deallocating checksum hash in librcksum (patch
+  from Timothy Lee)
 - fix some warnings
 - tidy up autoconf use
 
